Add: html structure with some images & add tailwind

--- a/index.html
+++ b/index.html
@@ -4,14 +4,196 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="./index.css" />
 
-		<script></script>
+		<link href="/dist/output.css" rel="stylesheet" />
 
 		<title>AI Landpage</title>
 	</head>
 
 	<body>
-		<h1 class="text-3xl font-bold underline">Hello world!</h1>
+		<div class="container text-white">
+			<div class="flex justify-between pt-8 mb-24">
+				<div class="flex items-center">
+					<img src="./assets/serendipity-logo.png" alt="logo" />
+
+					<h1 class="ml-2 text-2xl font-bold tracking-wider">Serendipity</h1>
+				</div>
+
+				<div>
+					<a href="#">Home</a>
+
+					<a href="#">Browse</a>
+
+					<a href="#">Updates</a>
+
+					<a href="#">Pricing</a>
+
+					<button>Sign up</button>
+				</div>
+			</div>
+
+			<div class="flex justify-between items-center mb-24">
+				<div class="flex flex-col">
+					<div class="flex">
+						<div></div>
+						<p>Introducing Image Feature</p>
+					</div>
+
+					<div>
+						<h1>Imagine with Serendipity</h1>
+					</div>
+
+					<p class="max-w-xl">
+						Discover a vibrant community of creators on Serendipity! Connect with
+						thousands of like-minded individuals on Discord or the web and unleash your
+						imagination through collaborative storytelling. From vivid worlds to
+						unforgettable characters, bring your short text descriptions to life in new
+						and exciting ways. Join Serendipity today and embark on a journey of endless
+						creativity!
+					</p>
+
+					<button class="flex justify-center">
+						<img alt="icon" />
+						<span>Generate Images</span>
+					</button>
+				</div>
+
+				<div class="flex flex-col mb">
+					<div class="flex flex-row">
+						<div class=""></div>
+
+						<h3 class="text-2xl">Updates</h3>
+					</div>
+
+					<div>
+						<div>
+							<img alt="image" />
+
+							<div>
+								<p>Upload Image</p>
+								<p>New Feature - Apr 30, 2023</p>
+							</div>
+						</div>
+
+						<div>
+							<img alt="image" />
+
+							<div>
+								<p>Permutation</p>
+								<p>New Feature - Apr 30, 2023</p>
+							</div>
+						</div>
+
+						<div>
+							<img alt="image" />
+
+							<div>
+								<p>Status Page</p>
+								<p>New Feature - Apr 30, 2023</p>
+							</div>
+						</div>
+
+						<div>
+							<img alt="image" />
+
+							<div>
+								<p>V2.1 Release</p>
+								<p>New Feature - Apr 30, 2023</p>
+							</div>
+						</div>
+						<div>
+							<img alt="image" />
+
+							<div>
+								<p>Linked Roles</p>
+								<p>New Feature - Apr 30, 2023</p>
+							</div>
+						</div>
+					</div>
+
+					<button>
+						<div>
+							<img />
+							<p>Read more</p>
+						</div>
+					</button>
+				</div>
+			</div>
+
+			<div class="flex flex-row gap-2">
+				<div class="flex flex-col rounded-xl">
+					<div>
+						<img
+							src="./assets/card-image-1.png"
+							class="object-cover h-56 w-full rounded-t-xl"
+						/>
+					</div>
+
+					<div class="border rounded-xl border-blue-500">
+						<p>Using Discord</p>
+
+						<div>
+							<p>Mastering the Art of Prompt Writing</p>
+
+							<p>
+								Prompt writing involves crafting clear and engaging prompts, while using
+								images to create a visual representation of the idea or concept.
+							</p>
+						</div>
+
+						<button>Join Discord</button>
+					</div>
+				</div>
+
+				<div class="flex flex-col rounded-xl">
+					<div>
+						<img
+							src="./assets/card-image-2.png"
+							class="object-cover h-56 w-full rounded-t-xl"
+						/>
+					</div>
+
+					<div>
+						<p>Getting Started</p>
+
+						<div>
+							<p>Mastering the Art of Prompt Writing</p>
+
+							<p>
+								Prompt writing involves crafting clear and engaging prompts, while using
+								images to create a visual representation of the idea or concept.
+							</p>
+						</div>
+
+						<button>Explore Now</button>
+					</div>
+				</div>
+
+				<div class="flex flex-col rounded-xl">
+					<div>
+						<img
+							src="./assets/card-image-3.png"
+							class="object-cover h-56 w-full rounded-t-xl"
+						/>
+					</div>
+
+					<div>
+						<p>User Guide</p>
+
+						<div>
+							<p>Mastering the Art of Prompt Writing</p>
+
+							<p>
+								Prompt writing involves crafting clear and engaging prompts, while using
+								images to create a visual representation of the idea or concept.
+							</p>
+						</div>
+
+						<button>View Documents</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
